18/09/2023 - Starting first doc page for SF

--- a/_slimframework/doc0001.md
+++ b/_slimframework/doc0001.md
@@ -1,12 +1,11 @@
 ---
-title: Intro
-position_number: 1
+title: SF4 - Quick setup of a homepage, aboutpage and
+  contactpage  
+position_number: 2
 parameters:
   - name:
     content:
 content_markdown: |-
-  Welcome to SlimFramework DOC.
-
   [**SF4**: Quick setup of a homepage, aboutpage and
   contactpage](#slimframeworkdoc0001)
   {: .info }
